# eScooterAI

./: .env.example  .gitattributes  .gitignore  3class_migration_plan.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  PROGRESS.md  README.md  RUNPOD_GUIDE.md  SPACE_README.md  convert_md_to_pdf.py  packages.txt  pyproject.toml  requirements.txt  test_telegram.py  모델테스트결과보고서.md  모델학습결과보고서.md
configs/: ppe_dataset.yaml  train_config.yaml
dataset/data/: README.md
docs/: 3class_migration_plan.md  DEPLOYMENT_GUIDE.md  INFERENCE_PLAN.md  IoU_GUIDE.md  RUNPOD_GUIDE.md  STREAMLIT_CLOUD_SECRETS.md  TELEGRAM_ALERT_PLAN.md  WEBCAM_INFERENCE_PLAN.md  WEB_PLAN.md  member_role.md  test_evaluation_report.md  모델테스트결과보고서.md
models/ppe-detection/: .gitattributes
models/ppe_detection/: .gitattributes  args.yaml
models/ppe_detection2/: args.yaml
notebooks/preprocess/: step1_convert_voc_to_yolo.ipynb  step2_verify_dataset2.ipynb  step3_merge_datasets.ipynb  step4_split_dataset.ipynb  step5_generate_yaml.ipynb  step6_validate_dataset.ipynb
notebooks/preprocessing/: step2_verify_dataset2.ipynb
notebooks/training/: train_yolov8.ipynb
scripts/: deploy_to_hf.sh
src/: preprocess_all.py
src/1_preprocess/: preprocess_all.py  redistribute_data.py  step1_convert_voc_to_yolo.py  step2_verify_dataset2.py  step3_merge_datasets.py  step4_split_dataset.py  step5_generate_yaml.py  step6_validate_dataset.py
src/2_training/: train.py  visualize_results.py
src/4_inference/: head_detection_demo.py  sample_inference.py
src/alert/: __init__.py  (+1 more)
test/: test_telegram_alert.py
vector_db/: documents.json  index.faiss
(+45 files in other folders)
