[project]
name = "tfguard"
version = "0.1.0"
description = "Industrial Safety Object Detection System using TensorFlow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow==2.13.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pillow>=9.5.0",
    "jupyter>=1.0.0",
    "ultralytics>=8.3.229",
    "python-dotenv>=1.2.1",
    "pandas>=2.1.0",
    "huggingface-hub>=0.20.0",
    "hf-transfer>=0.1.0",
]
